# Graph-Coloring

./: .gitignore  CMakeLists.txt  Graph.c  Graph.h  GraphColoring.c  GraphColoring.h  StudentList.txt  courses.txt  main.c  readFile.c  readFile.h
